@@ -7,15 +7,13 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $Revision: 1.53 $ $Date: 2008-06-16 22:34:03 $ $Author: christian $
+# @version $Revision: 1.54 $ $Date: 2008-06-26 04:57:27 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
 
-        * Fix bug in module "initialiser.c", after function call "decode", in function calls
-            | receive_file_system | decode | decode_compound
-            normally, a file name is handed over as wchar_t* when read from a cybol file;
-            at startup, however, the file name is given as (multibyte) char* on command line;
-            --> find a solution to this problem!
+        * Continue debugging in function call "receive_file_system" of function "initialise";
+            probably, the cybol file is not parsed/ decoded correctly --> compound_converter.c;
+            evaluate debug log messages; probably an error with wide character conversion
 
         * Find unspecific bug causing a segmentation fault in optionaliser,
             sometimes in function "optionalise_log_file", other times in "optionalise_log_level"
@@ -286,5 +284,5 @@
 --
 
         * Apply GPL3 to CYBOI source code and to CYBOL knowledge files
-        * Adapt copyright to me?
+        * Adapt copyright to me
         * Check in to CVS LaTeX source files of CYBOP book
